--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 body {}
 
 header {
@@ -51,6 +52,7 @@ ul.gnb a {
     z-index: 190;
 }
 
+
 section h2{
     font-family: 'Ranchers', cursive;
     text-transform: uppercase;
@@ -68,6 +70,7 @@ article.visual {
 
 section .visual>img {
     width: 100%;
+    height: 100%;
     position: absolute;
 }
 
@@ -186,20 +189,27 @@ article.brand_story{
 
 .brand_story_wrap>h3{
     font-size: 36px;
-    padding: 50px 0px 20px 0px;
+    padding: 80px 0px 20px 0px;
     font-weight: bold;
 }
 
-.brand_story_wrap p {
-font-size: 18px;
-line-height: 24px;
+#brand_story01{
+    font-size: 24px;
+    font-weight: 700;
+    padding: 10px 0px;
+}
+
+#brand_story02{
+    font-size: 20px;
+    line-height: 28px;
+    padding: 60px 0px;
 }
 
 article.store{
     width: 1280px;
     height: 620px;
     margin: 0px auto;
-    padding: 50px 0px 100px 0px;
+    padding: 50px 0px 70px 0px;
     position: relative;
 }
 article.store h2{
@@ -275,17 +285,20 @@ div.img_one:hover .caption{
 .more_store{ padding: 40px 0px;}
 .more_store a{
     font-size: 24px;
-    color:#60ae2b;
+    
     font-weight: bold;
     letter-spacing: 2px;
     padding: 4px 14px;
+    background: #60ae2b;
+    border-radius: 50px;
+    color:#fff;
+    
     transition: 0.3s;
 }
 
 .more_store a:hover{
-    background: #60ae2b;
-    border-radius: 50px;
-    color:#fff;
+    color:#60ae2b;
+    background: #fff;
     padding: 4px 14px;
 }
 .tel{
@@ -303,23 +316,120 @@ div.img_one:hover .caption{
 article.sns{
     clear: both;
     width: 1280px;
+    height: 320px;
     margin: 0 auto;
 }
 article.sns ul{display:block;}
 article.sns li{float: left;padding: 40px 70px;text-align: center;}
-article.sns img{transition: 0.3;}
+article.sns img{padding-top:20px;
+    transition: 0.3;}
 article.sns img:hover{
     opacity: 0.7;
 }
     
-
 article.sns li p{width: 180px;font-size: 18px;line-height: 20px;}
+
+article.gallery{
+    width: 1280px;
+    height: 600px;
+    margin: 0px auto;
+    padding: 24px 0px;
+    position: relative;
+}
+
+article.gallery h2{
+    position: absolute;
+    transform: rotate(-90deg);
+    top: 380px;
+    left: -112px;
+    opacity: 0.2;
+    letter-spacing: 6px;
+    font-size: 90px;
+}
+
+article.gallery .pic01{
+    width: 400px;
+    position: absolute;
+    right: 20px;
+    top: 72px;
+}
+
+.pic01_sub{
+    position: absolute;
+    right: 30px;
+    top: 350px;
+}
+.pic01_sub>p:nth-child(1){
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.pic01_sub>p:nth-child(2){
+    width: 420px;
+    font-size: 18px;
+    line-height: 24px;
+    text-align: justify;
+    padding: 10px 4px;
+}
+.pic01_sub>p:nth-child(3){
+    position: absolute;
+    top: 140px;
+    left: -720px !important;
+    font-size: 14px;
+    line-height: 20px;
+}
+        
+#box01{
+    width:700px;
+    height:400px;
+    border:3px solid #60ae2b;
+    overflow:hidden;
+    position:relative;
+    margin: 60px 0px 0px 96px;
+}
+
+
+ .gallery #img_box01{
+    width:2800px;
+    height:400px;
+    overflow:hidden;
+    position:relative; 
+}
+
+.gallery #img_box01 > img{
+    width:700px;
+    height:400px;
+    float:left;
+}
+.c_btn01{
+    position: absolute;
+    left:45%;
+    bottom:13px;
+}
+.c_btn01 > li{
+    background-color: #ccc;
+    width:14px;
+    height:8px;
+    display:inline-block;
+    cursor:pointer;
+    transition:0.5s;
+}
+
+li.on01{
+    width:40px !important; 
+    background-color:#60ae2b !important;
+}
+
+
+
+
 footer{
     clear: both;
     width: 100%;
     height: 500px;
     background: #60ae2b;
 }
+
 .footer_wrap{
     width: 1280px;
     margin: 0px auto;
@@ -336,3 +446,4 @@ footer dl{
 footer dt{
     padding-top: 40px;
 }
+
