--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,8 @@
 @charset "UTF-8";
 
-
-body {}
-
 header {
+    position: fixed;
+    z-index: 200;
     width: 100%;
     height: 80px;
     background: rgba(255, 255, 255, .7);
@@ -23,7 +22,6 @@ nav {
     height: 80px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgba(255, 255, 255, .7);
     position: fixed;
     top: 0px;
     z-index: 110;
@@ -52,6 +50,11 @@ ul.gnb a {
     z-index: 190;
 }
 
+ul.gnb a:hover{
+    color:#000;
+    transition: 0.8s;
+    text-decoration: underline;
+}
 
 section h2{
     font-family: 'Ranchers', cursive;
@@ -66,11 +69,12 @@ section h2{
 article.visual {
     height: 580px;
     position: relative;
+    padding-top: 80px;
 }
 
 section .visual>img {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: absolute;
 }
 
@@ -89,7 +93,7 @@ section .visual>img {
 .c_btn{
     position:absolute;
     z-index: 150;
-    bottom: 6%;
+    bottom: 2%;
     left: 50%;
     
 }
@@ -117,7 +121,7 @@ article.menu{
 .pic02_wrap p{
     position: absolute;
     top: 350px;
-    font-size: 22px;
+    font-size: 18px;
     line-height: 28px;
     width: 470px;
     text-align: justify;
@@ -238,6 +242,9 @@ article.store img{
 .store_right_wrap{
     width: 400px;
     float: right;
+    position: absolute;
+    right: 42px;
+    bottom: 54px;
 }
 
 .store_tit{
@@ -267,7 +274,7 @@ div.caption{
     position: absolute;
     padding: 10px 4px;
     width:100%;
-    bottom: -92px;
+    bottom: -94px;
     background-color: rgba(67,126,63,.9);
     color:#fff;
    text-indent: 10px;
@@ -302,7 +309,7 @@ div.img_one:hover .caption{
     padding: 4px 14px;
 }
 .tel{
-    padding: 2px;
+    padding: 3px;
     font-weight: 800;
 }
 .store_right_wrap ul{    
@@ -373,7 +380,7 @@ article.gallery .pic01{
 }
 .pic01_sub>p:nth-child(3){
     position: absolute;
-    top: 140px;
+    top: 144px;
     left: -720px !important;
     font-size: 14px;
     line-height: 20px;
@@ -382,7 +389,7 @@ article.gallery .pic01{
 #box01{
     width:700px;
     height:400px;
-    border:3px solid #60ae2b;
+    border:4px solid #60ae2b;
     overflow:hidden;
     position:relative;
     margin: 60px 0px 0px 96px;
@@ -426,24 +433,55 @@ li.on01{
 footer{
     clear: both;
     width: 100%;
-    height: 500px;
+    height: 300px;
     background: #60ae2b;
+    /* overflow: hidden; */
+}
+
+footer h1{
+    text-align: center;
+    padding: 16px;
+}
+
+footer h1 img{
+    width: 200px;
 }
 
 .footer_wrap{
     width: 1280px;
     margin: 0px auto;
+    position: relative;
 }
+
 footer dl{
+    float: left;
+    padding: 2px 100px;
+}
+footer dt{
+    font-size: 16px;
     text-transform: uppercase;
-    width: 300px;
-    padding: 40px 62px;
-    font-size: 18px;
+    padding: 12px 0px;
     font-weight: 500;
+    text-align:center;
+}
+
+footer dd{
+    font-size: 13px;
+    line-height: 24px;
     text-align: center;
 }
 
-footer dt{
-    padding-top: 40px;
+.footer_wrap p{
+    position: absolute;
+    top: 240px;
+    font-size: 12px;
+    text-align: center;
+    left: 22%;
+}
+
+
+.dl_wrap{
+    position: absolute;
+    left: 16%;
 }
 
