--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,130 +1,245 @@
 @charset "UTF-8";
+
 @media screen and (max-width:1200px) {
- header{
-     width: 100%;
-     height: 80px;
-     position: relative;
-     background: rgba(255,255,255,.0.7);
- }
- header h1{text-align: center;}
- header h1 img{width: 160px;padding: 22px;}
 
- input[type=checkbox]{
-     display: none;
- }
-#toggle, #location{
-    width: 40px;
-    position: absolute;
-    padding: 18px;
-    top: 0;
-    cursor: pointer;
-}
-#toggle{
+    .none {
+        display: none;
+    }
 
-}
+    header {
+        width: 100%;
+        height: 80px;
+        position: relative;
+        background: rgba(255, 255, 255, .0.7);
+    }
 
-#location{
-    right: 0px;
-}
+    header h1 {
+        text-align: center;
+    }
 
-#nav_toggle{
-    position: fixed;
-    width: 80%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    top: 0px;
-    left: -100%;
-    z-index: 500;
-    transition: 0.5s;
-}
+    header h1 img {
+        width: 160px;
+        padding: 22px;
+    }
 
-#nav_location{
-    position: fixed;
-    width: 80%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    top: 0px;
-    right: -100%;
-    z-index: 500;
-    transition: 0.5s;
-}
+    input[type=checkbox] {
+        display: none;
+    }
 
-/*닫기버튼 서식*/
-#nav_toggle label img{
-    position: absolute;
-    z-index: 909;
-    top: 14px;
-    left: 15px;
-    width: 42px;
-    cursor: pointer;
-}
+    #toggle,
+    #location {
+        width: 40px;
+        position: absolute;
+        padding: 18px;
+        top: 0;
+        cursor: pointer;
+    }
 
-#nav_location label img{
-    position: absolute;
-    z-index: 200;
-    top: 14px;
-    right: 15px;
-    width: 42px;
-}
+    #toggle {}
 
+    #location {
+        right: 0px;
+    }
 
+    #nav_toggle {
+        position: fixed;
+        width: 80%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        top: 0px;
+        left: -100%;
+        z-index: 500;
+        transition: 0.5s;
+    }
+    #nav_toggle ul{
+        padding: 50px 20px;
+        text-align: center;
+    }
+    #nav_toggle ul img{
+        width: 200px;
+    }
+    #nav_toggle ul li{
+        padding: 30px 0px;
+    }
+    #nav_toggle ul a{
+        color:#fff;
+        text-transform: uppercase;
+        font-size: 20px;
+    }
 
-#btn_toggle:checked ~ header #nav_toggle{
-    left: 0px;
-}
+    #nav_location {
+        position: fixed;
+        width: 80%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        top: 0px;
+        right: -100%;
+        z-index: 500;
+        transition: 0.5s;
+    }
+    #nav_location ul{
+        padding: 60px 20px;
+    }
+    #nav_location ul li{
+        padding: 6px 0px;
+    }
+    #nav_location a{
+        color:#fff;
+        font-size: 20px;
+    }
 
-#btn_location:checked ~ header #nav_location{
-    right: 0px;
-}
+    /*닫기버튼 서식*/
+    #nav_toggle label img {
+        position: absolute;
+        z-index: 909;
+        top: 14px;
+        left: 15px;
+        width: 42px;
+        cursor: pointer;
+    }
 
-
-
-section article.visual{
-   position: relative;
-   height: 550px;
-}
-
-section article.visual img{
-    width: 100%;
-    height: auto;
-    position: absolute;
-}
-.act {
-    z-index: 100;
-}
-
-.visal img:nth-child(2) {
-    z-index: 50;
-}
-
-.visual img:nth-child(3) {
-    z-index: 40;
-}
-
-.visual img:nth-child(4) {
-    z-index: 30;
-}
-
-.c_btn{
-    position:absolute;
-    z-index: 150;
-    bottom: 3%;
-    left: 50%;
-    
-}
-
-.c_btn > li{
-    float:left;
-    font-size: 20px;
-    color:#fff;
-    margin-right:10px;
-    cursor:pointer;
-}
+    #nav_location label img {
+        position: absolute;
+        z-index: 200;
+        top: 14px;
+        right: 15px;
+        width: 42px;
+    }
 
 
 
+    #btn_toggle:checked~header #nav_toggle {
+        left: 0px;
+    }
+
+    #btn_location:checked~header #nav_location {
+        right: 0px;
+    }
 
 
 
+    section article.visual {
+        position: relative;
+        height: 440px;
+    }
+
+    section article.visual img {
+        width: 100%;
+        height: auto;
+        position: absolute;
+    }
+
+    .act {
+        z-index: 100;
+    }
+
+    .visal img:nth-child(2) {
+        z-index: 50;
+    }
+
+    .visual img:nth-child(3) {
+        z-index: 40;
+    }
+
+    .visual img:nth-child(4) {
+        z-index: 30;
+    }
+
+    .c_btn {
+        position: absolute;
+        z-index: 150;
+        bottom: 5%;
+        left: 50%;
+
+    }
+
+    .c_btn>li {
+        float: left;
+        font-size: 20px;
+        color: #fff;
+        margin-right: 10px;
+        cursor: pointer;
+    }
+
+    article.menu {
+        clear: both;
+        width: 100%;
+        height: 1200px;
+        padding: 30px 0px;
+        position: relative;
+
+    }
+
+    article.menu img {
+        width: 85%;
+        border-radius: 50%;
+
+        margin: 30px 7% 0px 7.5%;
+    }
+
+    article.menu figure {
+        float: left;
+        width: 50%;
+
+    }
+
+    article.menu figcaption {
+        width: 100%;
+        text-align: center;
+        font-size: 16px;
+        line-height: 20px;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+
+    article.menu figcaption>span{
+        color:#ccc;
+        font-weight: 500;
+        font-size: 14px;
+        border: 1px solid #ccc;
+        padding: 0px 6px;
+    }
+
+
+    article h2 {
+        font-family: 'Ranchers', cursive;
+        font-size: 24px;
+        font-weight: 600;
+        letter-spacing: 6px;
+        padding: 10px;
+    }
+
+    article.banner01 {
+        clear: both;
+        background-image: url('../img/m_banner.jpg');
+        background-size: 100%;
+        height: 300px;
+        background-repeat: no-repeat;
+        text-align: center;
+    }
+
+    article.banner01 h2 {
+        color: #fff;
+    }
+
+    article.sns {
+        width: 100%;
+        height: 200px;
+        position: relative;
+    }
+
+    article.sns figure {
+        float: left;
+    }
+
+    footer {
+        width: 100%;
+        height: 300px;
+        background: #ccc;
+    }
+
+    dl>dd {
+        float: left;
+    }
 
 }
