--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,12 +5,21 @@
     .none {
         display: none;
     }
+    body{
+        width: 100%;
+    }
 
     header {
         width: 100%;
         height: 80px;
-        position: relative;
-        background: rgba(255, 255, 255, .0.7);
+    }
+
+    .header_wrap {
+        width: 100%;
+        height: 80px;
+        position: fixed;
+        background: rgba(255, 255, 255, 0.7);
+        z-index: 300;
     }
 
     header h1 {
@@ -51,18 +60,22 @@
         z-index: 500;
         transition: 0.5s;
     }
-    #nav_toggle ul{
+
+    #nav_toggle ul {
         padding: 50px 20px;
         text-align: center;
     }
-    #nav_toggle ul img{
+
+    #nav_toggle ul img {
         width: 200px;
     }
-    #nav_toggle ul li{
+
+    #nav_toggle ul li {
         padding: 30px 0px;
     }
-    #nav_toggle ul a{
-        color:#fff;
+
+    #nav_toggle ul a {
+        color: #fff;
         text-transform: uppercase;
         font-size: 20px;
     }
@@ -77,15 +90,20 @@
         z-index: 500;
         transition: 0.5s;
     }
-    #nav_location ul{
-        padding: 60px 20px;
+
+    #nav_location ul {
+        padding: 50px 20px;
     }
-    #nav_location ul li{
-        padding: 6px 0px;
+
+    #nav_location ul li {
+        padding: 4% 0px;
+        text-align: center;
     }
-    #nav_location a{
-        color:#fff;
+
+    #nav_location a {
+        color: #fff;
         font-size: 20px;
+        border-bottom:2px solid #60ae2b;       
     }
 
     /*닫기버튼 서식*/
@@ -120,7 +138,7 @@
 
     section article.visual {
         position: relative;
-        height: 440px;
+        height: 546px;
     }
 
     section article.visual img {
@@ -149,7 +167,8 @@
         position: absolute;
         z-index: 150;
         bottom: 5%;
-        left: 50%;
+        left: 55%;
+        transform: translateX(-50%);
 
     }
 
@@ -164,8 +183,8 @@
     article.menu {
         clear: both;
         width: 100%;
-        height: 1200px;
-        padding: 30px 0px;
+        height: 1530px;
+        padding: 0px 0px;
         position: relative;
 
     }
@@ -173,7 +192,6 @@
     article.menu img {
         width: 85%;
         border-radius: 50%;
-
         margin: 30px 7% 0px 7.5%;
     }
 
@@ -187,17 +205,17 @@
         width: 100%;
         text-align: center;
         font-size: 16px;
-        line-height: 20px;
+        line-height: 26px;
         text-transform: uppercase;
         font-weight: 700;
     }
 
-    article.menu figcaption>span{
-        color:#ccc;
+    article.menu figcaption>span {
+        color: #ccc;
         font-weight: 500;
         font-size: 14px;
         border: 1px solid #ccc;
-        padding: 0px 6px;
+        padding: 2px 10px;
     }
 
 
@@ -206,40 +224,171 @@
         font-size: 24px;
         font-weight: 600;
         letter-spacing: 6px;
-        padding: 10px;
+        padding: 30px 0px 20px 10px;
     }
 
     article.banner01 {
         clear: both;
         background-image: url('../img/m_banner.jpg');
         background-size: 100%;
-        height: 300px;
+        height: 265px;
         background-repeat: no-repeat;
         text-align: center;
+        position: relative;
+        line-height: 24px;
+
     }
+
+
 
     article.banner01 h2 {
         color: #fff;
+        padding-top: 20px;
+    }
+
+    #banner01_title {
+        font-size: 20px;
+        font-weight: 400;
+        color: #fff;
+        position: absolute;
+        bottom: 53%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    #banner01_text {
+        font-size: 14px;
+        width: 90%;
+        color: #fff;
+        line-height: 22px;
+        position: absolute;
+        bottom: 50px;
+        left: 5%;
+    }
+
+    article.store {
+        clear: both;
+        width: 100%;
+        height: 360px;
+        position: relative;
+    }
+
+    article.store .img_wrap {
+        width: 70%;
+        float: left;
+    }
+
+    article.store img {
+        width: 48%;
+    }
+    article.store>p{
+        padding: 10px 0px;
+        text-align: center;
+        margin: 0px 3%;
+        font-size: 14px;
+    }
+
+    .store_btn{
+        float: right;
+        width: 25%;
+        /* width: 0%; */
+        background: #60ae2b;
+        color:#fff;
+        font-size: 13px;
+        text-align:center;
+        padding: 6px 10px;
+        line-height: 16px;
+        border-radius: 50px;
+        position:absolute;
+        right: 1.5%;
+        bottom: 10px;
     }
 
     article.sns {
+        clear: both;
         width: 100%;
         height: 200px;
-        position: relative;
+    }
+
+
+
+    .figure_wrap {
+        width: 80%;
+        margin: 0px auto;
     }
 
     article.sns figure {
         float: left;
+        text-align: center;
+        padding: 10px 6% 0px 6%;
+        width: 20%;
+        
+    }
+
+    article.sns figcaption {
+        text-transform: uppercase;
+        padding: 10px 3%;
+        font-size: 14px;
+        width: 80px;
+        margin: 0px auto;
     }
 
     footer {
+        clear: both;
         width: 100%;
         height: 300px;
         background: #ccc;
+        position: relative;
+        /* text-align: center; */
+    }
+
+    footer dl{
+        width: 33%;
+        float: left;
+        text-align: center;
+        padding: 10px 0px;
+    }
+    footer dt {
+        font-weight: 700;
+        text-transform: uppercase;
+        padding: 10px 0px 12px 0px;
     }
 
     dl>dd {
-        float: left;
+        padding: 3px;
     }
+    .footer_wrap{
+        clear: both;
+        width: 90%;
+        padding: 10px;
+        text-align: center;
+        margin: 0px auto;
+    }
+    footer h1 {
+        text-align: center;
+        padding: 40px 0px 10px 0px;
+    }
+
+    footer ul{
+        position: absolute;
+        display: flex;
+        padding: 14px 0px;
+        left: 34%;
+        
+    }
+    footer li{
+        border-right: 2px solid #333;
+        padding: 3px;
+    }
+    
+    footer li:last-child{
+        border: none;
+    }
+
+    footer img {
+ 
+    }
+
+   
 
 }
