--- a/css/mobile.css
+++ b/css/mobile.css
@@ -337,7 +337,7 @@
         clear: both;
         width: 100%;
         height: 300px;
-        background: #ccc;
+        background:#60ae2b;
         position: relative;
         /* text-align: center; */
     }
